# ReportGenerator

./: Cargo.toml  README.md
data/: config.json
example/config/: config.json  config_docx.json
example/data/: data_1.json  data_1.xlsx  data_2.xlsx
example/output/: output.docx  output.xlsx  result.xlsx  test.xlsx
example/templates/: template.docx  template.xlsx  template_1.xlsx
src/: cli.rs  config.rs  error.rs  main.rs
src/data/: context.rs  excel_source.rs  json_source.rs  mod.rs  source.rs
src/engine/: document_ext.rs  excel_renderer.rs  mod.rs  table_ext.rs  word_renderer.rs
src/template/: ast.rs  formatter.rs  lexer.rs  mod.rs  parser.rs  token.rs  value.rs
