[package]
name = "report_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
umya-spreadsheet = "2.3.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
chrono = "0.4"
rdocx = "0.1"
rdocx-oxml = "0.1"  # 用于直接操作表格内部结构